alsa-lib (1.0.23-4) UNRELEASED; urgency=low

  * Switch to architecture wildcard 'linux-any'.

 -- Jordi Mallach <jordi@debian.org>  Mon, 18 Apr 2011 20:02:04 +0200

alsa-lib (1.0.23-3) unstable; urgency=low

  [ Elimar Riesebieter ]
  * Added armhf to supported arch's of libasound2 and libasound2-dev
    (closes: #596968)

  [ Jordi Mallach ]
  * Acknowledge Simon's NMU. Thanks a lot!

 -- Jordi Mallach <jordi@debian.org>  Mon, 18 Apr 2011 19:41:43 +0200

alsa-lib (1.0.23-2.1) unstable; urgency=low

  * Non-maintainer upload.
  * Add refcount-dlobjs.patch: backported upstream patch, originally by
    Jaroslav Kysela, to fix crashes when plugins are unloaded.
    (Closes: #589896, LP: #552411, #584393)
  * Add libtool-out-of-tree.patch: fix libtool version checking for the biarch
    build by grepping ltmain.sh in the ${srcdir}, making it unnecessary to
    force -DUSE_VERSIONED_SYMBOLS for the biarch build

 -- Simon McVittie <smcv@debian.org>  Fri, 08 Oct 2010 08:30:54 +0100

alsa-lib (1.0.23-2) unstable; urgency=medium

  [ Elimar Riesebieter ]
  * Make setlocale() thread safe:
    Applied thread-safe-locale.patch and thread-specific-locale.patch from
    upstream. (Closes: #595252)
  * Bump Standards-Version to 3.9.1, with no changes required.

 -- Jordi Mallach <jordi@debian.org>  Wed, 22 Sep 2010 12:22:18 +0200

alsa-lib (1.0.23-1) unstable; urgency=low

  * New upstream release.

  [ Elimar Riesebieter ]
  * Add powerpcspe to the list of supported architectures. Hint by Sebastian
    Andrzej Siewior. (closes: #583615)
  * Introduced DEP-3 patch headers.
  * Patch Dont_leak_timer_fd_on_pcm_slave_close.patch applied from upstream.
    Removed.

  [ Jordi Mallach ]
  * Remove lpia from the list of supported architectures, as it's not used
    by Ubuntu anymore.

 -- Jordi Mallach <jordi@debian.org>  Wed, 02 Jun 2010 20:21:04 +0200

alsa-lib (1.0.22-2) unstable; urgency=low

  [ Jordi Mallach ]
  * Bump Standards-Version to 3.8.4, with no changes required.
