@@ -93,6 +93,17 @@ Description: shared library for ALSA applications -- development files (32 bit)
  .
  ALSA is the Advanced Linux Sound Architecture.
 
+Package: libasound2-udeb
+Architecture: alpha amd64 arm armeb armel armhf avr32 hppa i386 ia64 m32r m68k mips mipsel powerpc powerpcspe ppc64 s390 s390x sh3 sh3eb sh4 sh4eb sparc sparc64
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Suggests: libasound2-plugins (>= 1.0.18)
+Conflicts: libasound2-plugins (<< 1.0.18)
+Package-Type: udeb
+Description: shared library for ALSA applications
+ This package contains the ALSA library and its standard plugins.
+ .
+ ALSA is the Advanced Linux Sound Architecture.
+
 Package: libasound2-doc
 Architecture: all
 Section: doc
