@@ -1,3 +1,0 @@
-debian/tmp/usr/lib/libasound.so.2.0.0
-debian/tmp/usr/lib/libasound.so.2
-debian/tmp/usr/share/alsa
