@@ -139,6 +139,10 @@ endif
 	dh_installdocs -plibasound2
 	dh_installexamples -s doc/asoundrc.txt
 	dh_installchangelogs -plibasound2 debian/changelog.ALSA
+	dh_install -plibasound2 /usr/lib/libasound.so.2.0.0 /usr/lib/libasound.so.2 /usr/lib
+	dh_install -plibasound2-udeb /usr/lib/libasound.so.2.0.0 /usr/lib/libasound.so.2 /usr/lib
+	cp -a debian/tmp/usr/share/alsa debian/libasound2/usr/share/
+	cp -a debian/tmp/usr/share/alsa debian/libasound2-udeb/usr/share/
 	dh_strip -s
 	dh_link -s
 	dh_compress -s
@@ -159,7 +163,7 @@ install-indep: build-indep-stamp
 	dh_fixperms -i
 
 binary-arch: build-arch-stamp install-arch
-	dh_makeshlibs -plibasound2  -V'libasound2 (>> 1.0.18)'
+	dh_makeshlibs -plibasound2  -V'libasound2 (>> 1.0.18)' --add-udeb=libasound2-udeb
 ifneq (,$(build_biarch_stamp))
 	dh_makeshlibs -plib$(bi)asound2  -V'lib$(bi)asound2 (>> 1.0.18)'
 endif
